# mosaic-n-gram-benchmark

./: .gitignore  LICENSE  Makefile  README.md  awk_iterative.sh  awk_recursive.sh  c_iterative.c  c_iterative2.c  c_iterative3.c  c_recursive.c  lorem_text_gen.py  ngram.py  perl_iterative.pl  pyproject.toml  result.txt  timeit.sh
