[tool.poetry]
name = "mosaic-n-gram-benchmark"
version = "1.0.0"
description = "Scripts for benchmarking mosaic n-gram creation methods"
readme = "README.md"
repository = "https://github.com/dlazesz/mosaic-n-gram-benchmark"
authors = ["dlazesz"]

license = "MIT"
# License and required Python version is automatically added
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
]

[tool.poetry.dependencies]
python = "^3.8"
memory-profiler = "^0.60.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
